PrevButton is working animations added